--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Red+Hat+Display&display=swap" rel="stylesheet">
 
-        <link rel="stylesheet" href="/styles/reset.css">
-        <link rel="stylesheet" href="/styles/game.css">
+        <link rel="stylesheet" href="styles/reset.css">
+        <link rel="stylesheet" href="styles/game.css">
 
-        <link rel="icon" type="image/x-icon" href="/galactic-agent-icon.png">
+        <link rel="icon" type="image/x-icon" href="galactic-agent-icon.png">
 
 
         <!-- <script src="/scripts/jquery-3.7.0.min.js"></script>
@@ -68,27 +68,27 @@
         <p class="version" id="version"></p>
         <div id="container"><canvas id="canvas"></canvas></div>
 
-        <script src="/helper.js"></script>
+        <script src="helper.js"></script>
 
-        <script src="/game/3rd-party/howler.min.js"></script>
-        <script src="/game/pyreEngine/pyreEngine.js"></script>
-        <script src="/game/references.js"></script>
-        <script src="/game/constants.js"></script>
-        <script src="/game/changelog.js"></script>
-        <script src="/game/gameHelpers.js"></script>
-        <script src="/game/input.js"></script>
-        <script src="/game/screens.js"></script>
-        <script src="/game/camera.js"></script>
-        <script src="/game/objects/gameObject.js"></script>
-        <script src="/game/objects/projectile.js"></script>
-        <script src="/game/objects/upgrade.js"></script>
-        <script src="/game/objects/goal.js"></script>
-        <script src="/game/objects/coin.js"></script>
-        <script src="/game/objects/damageBox.js"></script>
-        <script src="/game/objects/platform.js"></script>
-        <script src="/game/objects/glassPane.js"></script>
-        <script src="/game/objects/player.js"></script>
-        <script src="/game/gameBase.js"></script>
+        <script src="game/3rd-party/howler.min.js"></script>
+        <script src="game/pyreEngine/pyreEngine.js"></script>
+        <script src="game/references.js"></script>
+        <script src="game/constants.js"></script>
+        <script src="game/changelog.js"></script>
+        <script src="game/gameHelpers.js"></script>
+        <script src="game/input.js"></script>
+        <script src="game/screens.js"></script>
+        <script src="game/camera.js"></script>
+        <script src="game/objects/gameObject.js"></script>
+        <script src="game/objects/projectile.js"></script>
+        <script src="game/objects/upgrade.js"></script>
+        <script src="game/objects/goal.js"></script>
+        <script src="game/objects/coin.js"></script>
+        <script src="game/objects/damageBox.js"></script>
+        <script src="game/objects/platform.js"></script>
+        <script src="game/objects/glassPane.js"></script>
+        <script src="game/objects/player.js"></script>
+        <script src="game/gameBase.js"></script>
     </body>
 
 </html>
