--- a/index.html
+++ b/index.html
@@ -25,10 +25,14 @@
     <body oncontextmenu="return false;">
         <div id="content" class="content">
             <div id="startScreen" class="screen active">
-                <h1>Galactic Agent</h1>
+                <h1>
+                    <span>Galactic Agent</span>
+                    <img class='title' src="title.png">
+                </h1>
+                
                 <div class="menu">
-                    <h2>PRESS START</h2>
-                    <button id="start" autofocus><span class="flare"></span>Start</button>
+                    <!-- <h2>BY MAX LEEMING</h2> -->
+                    <button id="start" autofocus><span class="flare"></span>INITIATE OPERATION</button>
                 </div>
             </div>
             <div id="pauseScreen" class="menu screen">
@@ -83,7 +87,7 @@
         <script src="game/objects/projectile.js"></script>
         <script src="game/objects/upgrade.js"></script>
         <script src="game/objects/goal.js"></script>
-        <script src="game/objects/coin.js"></script>
+        <script src="game/objects/orb.js"></script>
         <script src="game/objects/damageBox.js"></script>
         <script src="game/objects/platform.js"></script>
         <script src="game/objects/glassPane.js"></script>
