--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <script src="game/objects/upgrade.js"></script>
         <script src="game/objects/goal.js"></script>
         <script src="game/objects/orb.js"></script>
+        <script src="game/objects/hoverbot.js"></script>
         <script src="game/objects/damageBox.js"></script>
         <script src="game/objects/platform.js"></script>
         <script src="game/objects/glassPane.js"></script>
