--- a/index.html
+++ b/index.html
@@ -89,6 +89,8 @@
         <script src="game/objects/goal.js"></script>
         <script src="game/objects/orb.js"></script>
         <script src="game/objects/hoverbot.js"></script>
+        <script src="game/objects/explosion.js"></script>
+        <script src="game/objects/explosionBullet.js"></script>
         <script src="game/objects/damageBox.js"></script>
         <script src="game/objects/platform.js"></script>
         <script src="game/objects/glassPane.js"></script>
