--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <script src="game/objects/upgrade.js"></script>
         <script src="game/objects/goal.js"></script>
         <script src="game/objects/orb.js"></script>
-        <script src="game/objects/hoverbot.js"></script>
+        <script src="game/objects/minebot.js"></script>
         <script src="game/objects/explosion.js"></script>
         <script src="game/objects/explosionBullet.js"></script>
         <script src="game/objects/damageBox.js"></script>
