--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
             </div>
         </div>
         <div id="ui">
+            <div id="health">
+                <div class="hitPoint"><div></div></div>
+            </div>
             <div id="timer" class="box">0:00:00:00</div>
             <div id="objectives"></div>
             <div id="levelStart" class="box">LEVEL 1</div>
