--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Red+Hat+Display&display=swap" rel="stylesheet">
+        <!-- <link href="https://fonts.googleapis.com/css2?family=Fira+Mono&family=Red+Hat+Display&display=swap" rel="stylesheet"> -->
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 
         <link rel="stylesheet" href="styles/reset.css">
         <link rel="stylesheet" href="styles/game.css">
@@ -32,7 +33,7 @@
                 
                 <div class="menu">
                     <!-- <h2>BY MAX LEEMING</h2> -->
-                    <button id="start" autofocus><span class="flare"></span>INITIATE OPERATION</button>
+                    <button id="start" autofocus><span class="flare"></span>Initiate Operation</button>
                 </div>
             </div>
             <div id="pauseScreen" class="menu screen">
@@ -67,6 +68,7 @@
             <div id="health">
                 <div class="hitPoint"><div></div></div>
             </div>
+            <div id="orbs"><img src="game/sprites/orb.png"><span id="orbTotal">0</span></div>
             <div id="timer" class="box">0:00:00:00</div>
             <div id="objectives"></div>
             <div id="levelStart" class="box">LEVEL 1</div>
