--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
                 
                 <div class="menu">
                     <!-- <h2>BY MAX LEEMING</h2> -->
-                    <button id="start" autofocus><span class="flare"></span>Initiate Operation</button>
+                    <button id="start"><span class="flare"></span>Initiate</button>
+                    <a href="./index.html" class='button' tabindex="-1"><button><span class="flare"></span>Quit</button></a>
                 </div>
             </div>
             <div id="pauseScreen" class="screen">
@@ -42,7 +43,7 @@
                     <button id="resume"><span class="flare"></span>Resume</button>
                     <button id="options"><span class="flare"></span>Options</button>
                     <button id="restart"><span class="flare"></span>Restart Mission</button>
-                    <a href="./index.html" class='button' tabindex="-1"><button><span class="flare"></span>Quit Game</button></a>
+                    <a href="./index.html" class='button' tabindex="-1"><button><span class="flare"></span>Main Menu</button></a>
                 </div>
                 <div class="controls">
                     <h2>Controls</h2>
