--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <button id="resume"><span class="flare"></span>Resume</button>
                     <button id="options"><span class="flare"></span>Options</button>
                     <button id="restart"><span class="flare"></span>Restart Mission</button>
-                    <a href="./index.html" class='button' tabindex="-1"><button><span class="flare"></span>Main Menu</button></a>
+                    <a href="https://sharkside.ca" class='button' tabindex="-1"><button><span class="flare"></span>Main Menu</button></a>
                 </div>
                 <div class="controls">
                     <h2>Controls</h2>
