--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </head>
 
     <body oncontextmenu="return false;">
+        <div id="fadeToBlack"></div>
         <div id="content" class="content">
             <div id="startScreen" class="screen active">
                 <h1>
