--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div id="titles">
                     <h1>
                         <span>Galactic Agent</span>
-                        <img class='title' src="title.png">
+                        <img class='title' src="images/title.png">
                     </h1>
                     
                     <div class="menu">
@@ -50,25 +50,28 @@
                         <p>It's a dangerous time to live in <span class="gold">THE DRIFT</span>.</p>
                     </div>
                     <div class="slide hide">
-                        <p>Piracy is rampant. Frontier systems endure constant psionic alien hyena raids.</p>
+                        <p>Piracy is rampant. Frontier systems endure constant raids at the hands of the alien psionic hyenas.</p>
                     </div>
                     <div class="slide hide">
                         <p>But amid all this chaos and turmoil, a new threat to galactic peace emerges...</p>
                     </div>
                     <div class="slide hide">
+                        <img src="images/VHAL-03.png">
                         <p>An experimental research facility called <span class="gold">VHAL-03</span> has gone dark, without warning.</p>
                     </div>
                     <div class="slide hide">
+                        <img src="images/VHAL-spire.png">
                         <p>The only hint of what transpired came in the form of a disturbing distress signal...</p>
                     </div>
                     <div class="slide hide">
-                        <p>"...FACILITY COMPROMISED. EVACUATION UNTENABLE. <span class="gold">REQUESTING IMMEDIATE STATION DESTRUCTION</span>. SITUATION CRITICAL."</p>
+                        <img src="images/VHAL-distress.png">
+                        <p>"...FACILITY COMPROMISED. EVACUATION UNTENABLE. SITUATION CRITICAL. <span class="red">REQUESTING IMMEDIATE STATION DESTRUCTION!</span>"</p>
                     </div>
                     <div class="slide hide">
                         <p>Acting on minimal information, <span class="gold">FLEET COMMAND</span> has dispatched you to investigate.</p>
                     </div>
                     <div class="slide hide">
-                        <p><span class="gold">AGENT EINZBECKER</span>... it's all up to you. Good luck.</p>
+                        <p><span class="gold">AGENT EINZBECKER...</span> it's all up to you. Good luck.</p>
                     </div>
 
                     
