--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <div class="menu">
                         <!-- <h2>BY MAX LEEMING</h2> -->
                         <button id="start"><span class="flare"></span>Initiate</button>
-                        <a href="https://www.sharkside.ca/" class='button' tabindex="-1"><button><span class="flare"></span>Quit</button></a>
+                        <a id="quit" href="https://www.sharkside.ca/" class='button' tabindex="-1"><button><span class="flare"></span>Quit</button></a>
                     </div>
                 </div>
                 <div id="openingText">
@@ -65,10 +65,10 @@
                     </div>
                     <div class="slide hide">
                         <img src="images/VHAL-distress.png">
-                        <p>"...FACILITY COMPROMISED. EVACUATION UNTENABLE. SITUATION CRITICAL. <span class="red">REQUESTING IMMEDIATE STATION DESTRUCTION!</span>"</p>
+                        <p>"...Facility compromised. Evacuation untenable. Situation critical. <span class="red">REQUESTING IMMEDIATE STATION DESTRUCTION!</span>"</p>
                     </div>
                     <div class="slide hide">
-                        <p>Acting on minimal information, <span class="gold">FLEET COMMAND</span> has dispatched you to investigate.</p>
+                        <p>Acting on minimal information, <span class="gold">FLEET COMMAND</span> dispatched you to investigate.</p>
                     </div>
                     <div class="slide hide">
                         <p><span class="gold">AGENT EINZBECKER...</span> it's all up to you. Good luck.</p>
@@ -152,6 +152,7 @@
         <script src="game/objects/explosionBullet.js"></script>
         <script src="game/objects/damageBox.js"></script>
         <script src="game/objects/platform.js"></script>
+        <script src="game/objects/panel.js"></script>
         <script src="game/objects/glassPane.js"></script>
         <script src="game/objects/player.js"></script>
         <script src="game/gameBase.js"></script>
