--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
                     </div>
                 </div>
                 <div id="openingText">
+                    <div class='pressEnter'>Press ENTER to skip...</div>
                     <div class="slide hide">
                         <p class="big">MAX LEEMING PRESENTS</p>
                     </div>
