--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </div>
                     <div class="slide hide">
                         <img src="images/VHAL-distress.png">
-                        <p>"...Facility compromised. Evacuation untenable. Situation critical. <span class="red">REQUESTING IMMEDIATE STATION DESTRUCTION!</span>"</p>
+                        <p>"Facility compromised. Evacuation untenable. Situation critical. <span class="red">REQUESTING IMMEDIATE STATION DESTRUCTION!</span>"</p>
                     </div>
                     <div class="slide hide">
                         <p>Acting on minimal information, <span class="gold">FLEET COMMAND</span> dispatched you to investigate.</p>
