--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
         <script src="game/objects/explosionBullet.js"></script>
         <script src="game/objects/damageBox.js"></script>
         <script src="game/objects/platform.js"></script>
+        <script src="game/objects/transition.js"></script>
         <script src="game/objects/panel.js"></script>
         <script src="game/objects/glassPane.js"></script>
         <script src="game/objects/player.js"></script>
