--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             <div id="orbs"><img src="game/sprites/orb.png"><span id="orbTotal"></span></div>
             <div id="timer" class="box">0:00:00:00</div>
             <div id="objectives"></div>
-            <div id="levelStart" class="box">LEVEL 1</div>
+            <div id="levelStart" class="box">
+            </div>
         </div>
         <!-- <div id="screenEffects"></div> -->
         <p class="version" id="version"></p>
