--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
         <script src="game/objects/minebot.js"></script>
         <script src="game/objects/explosion.js"></script>
         <script src="game/objects/explosionBullet.js"></script>
-        <script src="game/objects/damageBox.js"></script>
-        <script src="game/objects/platform.js"></script>
+        <script src="game/objects/murderBlock.js"></script>
+        <script src="game/objects/block.js"></script>
         <script src="game/objects/transition.js"></script>
         <script src="game/objects/panel.js"></script>
         <script src="game/objects/glassPane.js"></script>
